add mesa redis
